# GPU-MODE-OPENENV

./: COMPLIANCE_REPORT.md  Dockerfile  FIXES_SUMMARY.md  README.md  TODO.md  benchmark.py  graders.py  inference.py  openenv.yaml  pyproject.toml  quickstart.sh  requirements.txt  test_api.py  validate.py  validate_grader_test.py
my_env/: .dockerignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
my_env/server/: app.py  my_env_environment.py
server/: __init__.py  app.py  base.py  environment.py  models.py
