[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-bio"
version = "1.0.0"
description = "Biological Experiment Optimization OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Vivek Kumar Singh", email = "singhvivek12576@gmail.com" }
]
license = { text = "MIT" }
keywords = ["openenv", "reinforcement-learning", "biological-optimization"]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
